// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alarms-list-row-instructions-icon Renders \`alarms-list-row-instructions-icon\` with all auto instructions successful 1`] = `
<c-simple-tooltip-stub
  content="<span class=\\"pre-wrap\\">Automatic instructions <strong>Instruction 1, Instruction 2</strong> is successful</span>"
  top=""
>
  <i
    aria-hidden="true"
    class="v-icon notranslate instruction-icon material-icons theme--light instruction-icon--completed"
    style="font-size: 22px;"
  >
    assignment
  </i>
</c-simple-tooltip-stub>
`;

exports[`alarms-list-row-instructions-icon Renders \`alarms-list-row-instructions-icon\` with auto instruction failed 1`] = `
<c-simple-tooltip-stub
  content="<span class=\\"pre-wrap\\">Automatic instructions <strong>Instruction 1, Instruction 2</strong> is failed</span>"
  top=""
>
  <i
    aria-hidden="true"
    class="v-icon notranslate instruction-icon material-icons theme--light instruction-icon--failed"
    style="font-size: 22px;"
  >
    assignment
  </i>
</c-simple-tooltip-stub>
`;

exports[`alarms-list-row-instructions-icon Renders \`alarms-list-row-instructions-icon\` with auto instruction running 1`] = `
<c-simple-tooltip-stub
  content="<span class=\\"pre-wrap\\">Automatic instructions <strong>Instruction 1, Instruction 2</strong> in progress</span>"
  top=""
>
  <i
    aria-hidden="true"
    class="v-icon notranslate instruction-icon material-icons theme--light instruction-icon--failed"
    style="font-size: 22px;"
  >
    assignment
  </i>
</c-simple-tooltip-stub>
`;

exports[`alarms-list-row-instructions-icon Renders \`alarms-list-row-instructions-icon\` with manual instruction failed 1`] = `
<c-simple-tooltip-stub
  content="<span class=\\"pre-wrap\\">Manual instructions <strong>Instruction 1, Instruction 2</strong> is failed</span>"
  top=""
>
  <span
    aria-hidden="true"
    class="v-icon notranslate instruction-icon theme--light instruction-icon--failed"
    style="font-size: 22px; height: 22px; width: 22px;"
  >
    <svg
      class="v-icon__component theme--light"
      fill="none"
      style="font-size: 22px; height: 22px; width: 22px;"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        clip-path="url(#clip0_8821_52891)"
      >
        <path
          d="M19 3H14.82C14.4 1.84 13.3 1 12 1C10.7 1 9.6 1.84 9.18 3H5C3.9 3 3 3.9 3 5V19C3 20.1 3.9 21 5 21H19C20.1
      21 21 20.1 21 19V5C21 3.9 20.1 3 19 3ZM12 5C11.45 5 11 4.55 11 4C11 3.45 11.45 3 12 3C12.55 3 13 3.45 13 4C13
      4.55 12.55 5 12 5Z"
          fill="currentColor"
        />
        <g
          clip-path="url(#clip1_8821_52891)"
        >
          <path
            d="M16.5 8.75V16C16.5 17.1 15.6 18 14.5 18H10.85C10.31 18 9.8 17.785 9.425 17.405L5.5 13.415C5.5 13.415 6.13
        12.8 6.15 12.79C6.26 12.695 6.395 12.645 6.545 12.645C6.655 12.645 6.755 12.675 6.845 12.725C6.865 12.73 9
        13.955 9 13.955V8C9 7.585 9.335 7.25 9.75 7.25C10.165 7.25 10.5 7.585 10.5 8V11.5H11V6.75C11 6.335 11.335
        6 11.75 6C12.165 6 12.5 6.335 12.5 6.75V11.5H13V7.25C13 6.835 13.335 6.5 13.75 6.5C14.165 6.5 14.5 6.835
        14.5 7.25V11.5H15V8.75C15 8.335 15.335 8 15.75 8C16.165 8 16.5 8.335 16.5 8.75Z"
            fill="white"
          />
        </g>
      </g>
    </svg>
  </span>
</c-simple-tooltip-stub>
`;

exports[`alarms-list-row-instructions-icon Renders \`alarms-list-row-instructions-icon\` with manual instruction running 1`] = `
<c-simple-tooltip-stub
  content="<span class=\\"pre-wrap\\">Manual instructions <strong>Instruction 1, Instruction 2</strong> in progress</span>"
  top=""
>
  <span
    aria-hidden="true"
    class="v-icon notranslate instruction-icon theme--light blinking instruction-icon--dotted"
    style="font-size: 22px; height: 22px; width: 22px;"
  >
    <svg
      class="v-icon__component theme--light"
      fill="none"
      style="font-size: 22px; height: 22px; width: 22px;"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        clip-path="url(#clip0_8821_52891)"
      >
        <path
          d="M19 3H14.82C14.4 1.84 13.3 1 12 1C10.7 1 9.6 1.84 9.18 3H5C3.9 3 3 3.9 3 5V19C3 20.1 3.9 21 5 21H19C20.1
      21 21 20.1 21 19V5C21 3.9 20.1 3 19 3ZM12 5C11.45 5 11 4.55 11 4C11 3.45 11.45 3 12 3C12.55 3 13 3.45 13 4C13
      4.55 12.55 5 12 5Z"
          fill="currentColor"
        />
        <g
          clip-path="url(#clip1_8821_52891)"
        >
          <path
            d="M16.5 8.75V16C16.5 17.1 15.6 18 14.5 18H10.85C10.31 18 9.8 17.785 9.425 17.405L5.5 13.415C5.5 13.415 6.13
        12.8 6.15 12.79C6.26 12.695 6.395 12.645 6.545 12.645C6.655 12.645 6.755 12.675 6.845 12.725C6.865 12.73 9
        13.955 9 13.955V8C9 7.585 9.335 7.25 9.75 7.25C10.165 7.25 10.5 7.585 10.5 8V11.5H11V6.75C11 6.335 11.335
        6 11.75 6C12.165 6 12.5 6.335 12.5 6.75V11.5H13V7.25C13 6.835 13.335 6.5 13.75 6.5C14.165 6.5 14.5 6.835
        14.5 7.25V11.5H15V8.75C15 8.335 15.335 8 15.75 8C16.165 8 16.5 8.335 16.5 8.75Z"
            fill="white"
          />
        </g>
      </g>
    </svg>
  </span>
</c-simple-tooltip-stub>
`;

exports[`alarms-list-row-instructions-icon Renders \`alarms-list-row-instructions-icon\` without instruction 1`] = `
<c-simple-tooltip-stub
  content="<span class=\\"pre-wrap\\"></span>"
  top=""
>
  <span
    aria-hidden="true"
    class="v-icon notranslate instruction-icon theme--light"
    style="font-size: 22px; height: 22px; width: 22px;"
  >
    <svg
      class="v-icon__component theme--light"
      fill="none"
      style="font-size: 22px; height: 22px; width: 22px;"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        clip-path="url(#clip0_8821_52891)"
      >
        <path
          d="M19 3H14.82C14.4 1.84 13.3 1 12 1C10.7 1 9.6 1.84 9.18 3H5C3.9 3 3 3.9 3 5V19C3 20.1 3.9 21 5 21H19C20.1
      21 21 20.1 21 19V5C21 3.9 20.1 3 19 3ZM12 5C11.45 5 11 4.55 11 4C11 3.45 11.45 3 12 3C12.55 3 13 3.45 13 4C13
      4.55 12.55 5 12 5Z"
          fill="currentColor"
        />
        <g
          clip-path="url(#clip1_8821_52891)"
        >
          <path
            d="M16.5 8.75V16C16.5 17.1 15.6 18 14.5 18H10.85C10.31 18 9.8 17.785 9.425 17.405L5.5 13.415C5.5 13.415 6.13
        12.8 6.15 12.79C6.26 12.695 6.395 12.645 6.545 12.645C6.655 12.645 6.755 12.675 6.845 12.725C6.865 12.73 9
        13.955 9 13.955V8C9 7.585 9.335 7.25 9.75 7.25C10.165 7.25 10.5 7.585 10.5 8V11.5H11V6.75C11 6.335 11.335
        6 11.75 6C12.165 6 12.5 6.335 12.5 6.75V11.5H13V7.25C13 6.835 13.335 6.5 13.75 6.5C14.165 6.5 14.5 6.835
        14.5 7.25V11.5H15V8.75C15 8.335 15.335 8 15.75 8C16.165 8 16.5 8.335 16.5 8.75Z"
            fill="white"
          />
        </g>
      </g>
    </svg>
  </span>
</c-simple-tooltip-stub>
`;
